# docs/swagger.json
@@ -194,6 +194,43 @@
                 }
             }
         },
+        "/api/v1/sendSms": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "发送短信",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": " 手机号",
+                        "name": "phone",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/upload": {
             "post": {
                 "consumes": [
@@ -285,6 +322,67 @@
                     },
                     "500": {
                         "description": "内部错误"
+                    }
+                }
+            }
+        },
+        "/api/v1/user/login": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户接口"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": " 手机号",
+                        "name": "phone",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": " 密码",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": " 验证码ID",
+                        "name": "captcha_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": " 验证码",
+                        "name": "captcha_value",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/response.Code"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.Code"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.Code"
+                        }
                     }
                 }
             }
@@ -384,21 +482,33 @@
         "model.User": {
             "type": "object",
             "properties": {
+                "avatar": {
+                    "description": "头像",
+                    "type": "string"
+                },
                 "email": {
                     "description": "邮箱",
                     "type": "string"
+                },
+                "email_bind": {
+                    "description": "邮箱绑定 1是 2否",
+                    "type": "integer"
+                },
+                "email_sing": {
+                    "description": "邮箱注册 1是 2否",
+                    "type": "integer"
                 },
                 "id": {
                     "description": "id",
                     "type": "integer"
                 },
-                "mobile": {
+                "phone": {
                     "description": "手机号",
                     "type": "string"
                 },
-                "password": {
-                    "description": "密码",
-                    "type": "string"
+                "sex": {
+                    "description": "性别 1男 2女 3未知",
+                    "type": "integer"
                 },
                 "token": {
                     "description": "token",
@@ -411,6 +521,10 @@
                 "user_name": {
                     "description": "用户名",
                     "type": "string"
+                },
+                "uuid": {
+                    "description": "uuid",
+                    "type": "integer"
                 }
             }
         },
